--- a/index.html
+++ b/index.html
@@ -3,57 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eyes on Gaza</title>
+    <title>Support Gaza Campaign</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Eyes on Gaza</h1>
+        <h1>Support the People of Gaza</h1>
         <nav>
-            <a href="#about">About</a>
-            <a href="#crimes">War Crimes</a>
-            <a href="#statistics">Statistics</a>
-            <a href="#support">Support Gaza</a>
-            <a href="#contact">Contact</a>
+            <ul>
+                <li><a href="#crimes">War Crimes</a></li>
+                <li><a href="#statistics">Statistics</a></li>
+                <li><a href="#support">How to Support</a></li>
+                <li><a href="#socials">Our Social Media</a></li>
+            </ul>
         </nav>
     </header>
 
-    <section id="about">
-        <h2>About the Campaign</h2>
-        <p>Gaza is under siege, facing severe atrocities. We aim to expose these injustices and raise global awareness.</p>
-    </section>
+    <main>
+        <section id="crimes">
+            <h2>Documented War Crimes</h2>
+            <p>The recent escalation of violence in Gaza has led to numerous war crimes, including:</p>
+            <ul>
+                <li><strong>Bombing of al-Ahli Baptist Hospital:</strong> On October 17, 2023, this attack resulted in the deaths of at least 471 civilians, including many women and children, and hundreds were injured. The bombing shocked the world and highlighted the indiscriminate nature of the violence.</li>
+                <li><strong>Destruction of Refugee Camps:</strong> In Rafah, refugee camps have come under fire, displacing families multiple times. Families have been forced to flee from their temporary shelters, leaving them vulnerable and without basic necessities.</li>
+                <li><strong>Use of White Phosphorus:</strong> The use of white phosphorus in heavily populated areas is a serious concern. This substance causes severe burns and is banned in civilian areas under international law.</li>
+                <li><strong>Attacks on Medical Facilities:</strong> The bombing of hospitals, including Shifa Hospital, has left many without access to medical care. Facilities are struggling to operate without electricity, medicine, or adequate staff due to the ongoing blockade.</li>
+                <li><strong>Targeting Civilians:</strong> Many reports indicate that residential areas have been targeted, resulting in significant civilian casualties. The high number of deaths, including children, underscores the devastating impact of the conflict.</li>
+            </ul>
+            <p>These actions represent grave violations of international humanitarian law and raise serious questions about accountability for war crimes.</p>
+        </section>
 
-    <section id="crimes">
-        <h2>Documented War Crimes</h2>
-        <ul>
-            <li>Bombing of Al-Ahli Hospital</li>
-            <li>Destruction of refugee shelters in Rafah</li>
-            <li>Attacks on the Al-Shifa Medical Complex</li>
-            <li>Use of white phosphorus munitions</li>
-        </ul>
-    </section>
+        <section id="statistics">
+            <h2>Casualty Statistics</h2>
+            <p>The humanitarian crisis in Gaza is dire, with alarming statistics reflecting the scale of the tragedy:</p>
+            <ul>
+                <li><strong>Total Deaths:</strong> Over <strong>42,000</strong> individuals have lost their lives since the conflict began.</li>
+                <li><strong>Missing Persons:</strong> Thousands remain unaccounted for, with many families desperately searching for their loved ones.</li>
+                <li><strong>Injuries:</strong> Reports indicate that thousands have sustained serious injuries, with hospitals overwhelmed and lacking necessary medical supplies.</li>
+                <li><strong>Destruction of Infrastructure:</strong> Key infrastructure, including hospitals and schools, has been destroyed, making it difficult for the population to access essential services.</li>
+                <li><strong>Displacement:</strong> Approximately <strong>1.4 million</strong> people have been displaced, forced to flee their homes multiple times, facing dire living conditions.</li>
+                <li><strong>Child Casualties:</strong> Many children have been killed or injured, with countless families left shattered by the loss of their young ones.</li>
+            </ul>
+            <p>These statistics paint a grim picture of the ongoing humanitarian crisis and highlight the urgent need for international intervention.</p>
+        </section>
 
-    <section id="statistics">
-        <h2>War Statistics</h2>
-        <p>Current reports indicate over 42,000 deaths, with thousands missing, including women and children.</p>
-    </section>
+        <section id="support">
+            <h2>How You Can Help</h2>
+            <p>Supporting organizations like <strong>Waqf al-Ummah</strong> is crucial in providing aid to those affected by the ongoing violence. Your donations can help deliver essential supplies such as food, medicine, and shelter for displaced families.</p>
+            <p>To contribute, visit <a href="https://waqfalumma.org">Waqf al-Ummah</a> for more information on how you can make a difference.</p>
+        </section>
 
-    <section id="support">
-        <h2>Support Gaza</h2>
-        <a class="button" href="https://www.amanpal.org">Donate via AmanPal</a>
-    </section>
-
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <ul>
-            <li><a href="https://www.facebook.com/eyes.on.gaza.2024">Facebook</a></li>
-            <li><a href="https://www.instagram.com/eyesongaza_now">Instagram</a></li>
-            <li><a href="https://x.com/EyesOnGaza_Now">Twitter</a></li>
-        </ul>
-    </section>
+        <section id="socials">
+            <h2>Follow Us on Social Media</h2>
+            <p>Stay updated on our campaign and the situation in Gaza through our social media channels:</p>
+            <ul>
+                <li><a href="https://www.facebook.com/eyes.on.gaza.2024?mibextid=ZbWKwL">Facebook</a></li>
+                <li><a href="https://www.instagram.com/eyesongaza_now?igsh=YzljYTk1ODg3Zg==">Instagram</a></li>
+                <li><a href="https://x.com/EyesOnGaza_Now?t=LHJ7m_23AX9R5yRvBwuocQ&s=09">Twitter</a></li>
+            </ul>
+        </section>
+    </main>
 
     <footer>
-        <p>© 2024 Eyes on Gaza. All rights reserved.</p>
+        <p>&copy; 2024 Support Gaza Campaign. All rights reserved.</p>
     </footer>
 </body>
-                  </html>
+</html> 
