--- a/index.html
+++ b/index.html
@@ -11,61 +11,80 @@
         <h1>Support the People of Gaza</h1>
         <nav>
             <ul>
-                <li><a href="#crimes">War Crimes</a></li>
-                <li><a href="#statistics">Statistics</a></li>
-                <li><a href="#support">How to Support</a></li>
-                <li><a href="#socials">Our Social Media</a></li>
+                <li><a href="#section1">Introduction</a></li>
+                <li><a href="#section2">Documented War Crimes</a></li>
+                <li><a href="#section3">International Silence</a></li>
+                <li><a href="#section4">Statistics</a></li>
+                <li><a href="#section5">How to Support</a></li>
+                <li><a href="#section6">Follow Us</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="crimes">
-            <h2>Documented War Crimes</h2>
-            <p>The recent escalation of violence in Gaza has led to numerous war crimes, including:</p>
+        <section id="section1">
+            <h2>Introduction to Gaza’s Humanitarian Crisis</h2>
+            <p>Gaza has become synonymous with suffering. In recent weeks, relentless airstrikes, artillery fire, and blockades have created one of the deadliest humanitarian crises of our time. Schools, hospitals, and homes are no longer safe. As civilians try to escape, they are met with further attacks—leaving families without shelter, food, or medical care.</p>
+            <blockquote>"Under the rubble, children sleep forever, robbed of tomorrow’s dreams."</blockquote>
+        </section>
+
+        <section id="section2">
+            <h2>Documented War Crimes and Massacres</h2>
+            <p>The following incidents stand as glaring examples of collective punishment and violations of international law:</p>
+            <ol>
+                <li><strong>Baptist Hospital Bombing (October 17)</strong>: Hundreds of civilians, including patients and medical staff, were killed in an airstrike on the Baptist Hospital. Families seeking refuge in the hospital compound were targeted despite it being a protected medical facility.</li>
+                <li><strong>Burning of Refugee Tents in Rafah</strong>: Already displaced families were forced to flee again when their temporary shelters were set on fire by artillery strikes, leaving dozens homeless.</li>
+                <li><strong>Destruction of Al-Shifa Medical Complex</strong>: Gaza’s largest hospital was hit by repeated strikes, putting thousands of injured civilians at risk as the healthcare system teeters on collapse.</li>
+                <li><strong>Use of White Phosphorus</strong>: Documented use of white phosphorus—a chemical weapon that causes severe burns—on civilian areas, including residential neighborhoods.</li>
+                <li><strong>Mass Casualties and Targeting of Children</strong>: Over 42,000 civilians have been killed, including thousands of children, with schools, mosques, and markets destroyed in this ongoing campaign.</li>
+            </ol>
+        </section>
+
+        <section id="section3">
+            <h2>The Tragedy of International Silence</h2>
+            <p>Despite overwhelming evidence of war crimes, the global response has been shockingly inadequate. Governments that have the power to stop the violence remain silent or actively support the occupation.</p>
+            <blockquote>"The silence of the powerful is the death knell for the powerless."</blockquote>
+            <p>This silence must end. Every person who turns away, every leader who chooses neutrality, allows these crimes to continue unchecked. It is up to us to amplify the truth.</p>
+        </section>
+
+        <section id="section4">
+            <h2>Statistics and Human Impact</h2>
+            <p>The toll of war is staggering:</p>
             <ul>
-                <li><strong>Bombing of al-Ahli Baptist Hospital:</strong> On October 17, 2023, this attack resulted in the deaths of at least 471 civilians, including many women and children, and hundreds were injured. The bombing shocked the world and highlighted the indiscriminate nature of the violence.</li>
-                <li><strong>Destruction of Refugee Camps:</strong> In Rafah, refugee camps have come under fire, displacing families multiple times. Families have been forced to flee from their temporary shelters, leaving them vulnerable and without basic necessities.</li>
-                <li><strong>Use of White Phosphorus:</strong> The use of white phosphorus in heavily populated areas is a serious concern. This substance causes severe burns and is banned in civilian areas under international law.</li>
-                <li><strong>Attacks on Medical Facilities:</strong> The bombing of hospitals, including Shifa Hospital, has left many without access to medical care. Facilities are struggling to operate without electricity, medicine, or adequate staff due to the ongoing blockade.</li>
-                <li><strong>Targeting Civilians:</strong> Many reports indicate that residential areas have been targeted, resulting in significant civilian casualties. The high number of deaths, including children, underscores the devastating impact of the conflict.</li>
+                <li><strong>Total Deaths:</strong> 42,000 dead, including over 11,000 children.</li>
+                <li><strong>Injuries:</strong> 100,000 injured.</li>
+                <li><strong>Displacement:</strong> 1.9 million people displaced.</li>
+                <li><strong>Infrastructure Damage:</strong> 190 schools and shelters damaged; major hospitals destroyed, including Al-Shifa and the Baptist Hospital.</li>
+                <li><strong>Critical Shortages:</strong> No access to clean water, food, or medical supplies.</li>
+                <li><strong>Missing Persons:</strong> Thousands missing, families torn apart with no word on their loved ones' fates.</li>
             </ul>
-            <p>These actions represent grave violations of international humanitarian law and raise serious questions about accountability for war crimes.</p>
         </section>
 
-        <section id="statistics">
-            <h2>Casualty Statistics</h2>
-            <p>The humanitarian crisis in Gaza is dire, with alarming statistics reflecting the scale of the tragedy:</p>
+        <section id="section5">
+            <h2>How to Support and Take Action</h2>
+            <p>The people of Gaza need more than sympathy—they need action. Here’s how you can help:</p>
             <ul>
-                <li><strong>Total Deaths:</strong> Over <strong>42,000</strong> individuals have lost their lives since the conflict began.</li>
-                <li><strong>Missing Persons:</strong> Thousands remain unaccounted for, with many families desperately searching for their loved ones.</li>
-                <li><strong>Injuries:</strong> Reports indicate that thousands have sustained serious injuries, with hospitals overwhelmed and lacking necessary medical supplies.</li>
-                <li><strong>Destruction of Infrastructure:</strong> Key infrastructure, including hospitals and schools, has been destroyed, making it difficult for the population to access essential services.</li>
-                <li><strong>Displacement:</strong> Approximately <strong>1.4 million</strong> people have been displaced, forced to flee their homes multiple times, facing dire living conditions.</li>
-                <li><strong>Child Casualties:</strong> Many children have been killed or injured, with countless families left shattered by the loss of their young ones.</li>
+                <li><strong>Contact Your Representatives:</strong> Demand that your government condemns the occupation and supports immediate humanitarian corridors.</li>
+                <li><strong>Donate to Humanitarian Relief Efforts:</strong> Ensure aid reaches those in need.</li>
+                <li><strong>Share the Stories:</strong> Use your voice to raise awareness on social media.</li>
             </ul>
-            <p>These statistics paint a grim picture of the ongoing humanitarian crisis and highlight the urgent need for international intervention.</p>
+            <blockquote>"Every voice counts. Every action matters."</blockquote>
         </section>
 
-        <section id="support">
-            <h2>How You Can Help</h2>
-            <p>Supporting organizations like <strong>Waqf al-Ummah</strong> is crucial in providing aid to those affected by the ongoing violence. Your donations can help deliver essential supplies such as food, medicine, and shelter for displaced families.</p>
-            <p>To contribute, visit <a href="https://waqfalumma.org">Waqf al-Ummah</a> for more information on how you can make a difference.</p>
-        </section>
-
-        <section id="socials">
+        <section id="section6">
             <h2>Follow Us on Social Media</h2>
-            <p>Stay updated on our campaign and the situation in Gaza through our social media channels:</p>
+            <p>Stay updated and help spread the word by following our campaign on social media:</p>
             <ul>
-                <li><a href="https://www.facebook.com/eyes.on.gaza.2024?mibextid=ZbWKwL">Facebook</a></li>
-                <li><a href="https://www.instagram.com/eyesongaza_now?igsh=YzljYTk1ODg3Zg==">Instagram</a></li>
-                <li><a href="https://x.com/EyesOnGaza_Now?t=LHJ7m_23AX9R5yRvBwuocQ&s=09">Twitter</a></li>
+                <li><a href="https://www.facebook.com/eyes.on.gaza.2024?mibextid=ZbWKwL">Facebook: Eyes on Gaza</a></li>
+                <li><a href="https://www.instagram.com/eyesongaza_now?igsh=YzljYTk1ODg3Zg==">Instagram: Eyes on Gaza</a></li>
+                <li><a href="https://x.com/EyesOnGaza_Now?t=LHJ7m_23AX9R5yRvBwuocQ&s=09">X (Twitter): Eyes on Gaza</a></li>
             </ul>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Support Gaza Campaign. All rights reserved.</p>
+        <p>&copy; 2024 Eyes on Gaza | All rights reserved.</p>
+        <p>Disclaimer: This website is dedicated to raising awareness and providing factual information. Sources are cited where applicable.</p>
     </footer>
 </body>
-</html> 
+</html>
